--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
-    "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
-    "tailwind-merge": "^2.4.0"
+    "tailwind-merge": "^2.4.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
